fix overflow Puzzleword

--- a/src/components/puzzle/PuzzleWord/PuzzleWord.module.css
+++ b/src/components/puzzle/PuzzleWord/PuzzleWord.module.css
@@ -3,7 +3,6 @@
   z-index: 50;
   margin: 150px;
   padding-right: 200px;
-  overflow: hidden;
 }
 
 .newWordBtn {
